extend filter by other USB Serial chips

--- a/index.html
+++ b/index.html
@@ -120,7 +120,13 @@ let wifiListObj = [];
 let kniwwelinoID = "";
 
 const filters = [ //1a86:7523
-  { usbVendorId: 0x1a86, usbProductId: 0x7523 }
+  { usbVendorId: 0x1a86, usbProductId: 0x7523 },
+  { usbVendorId: 0x10c4, usbProductId: 0xea60 },
+  { usbVendorId: 0x0483, usbProductId: 0x5740 }, 
+  { usbVendorId: 0x0403, usbProductId: 0x6001 }, 
+  { usbVendorId: 0x0403, usbProductId: 0x6015 }, 
+  { usbVendorId: 0x2341, usbProductId: 0x0010 }, 
+  { usbVendorId: 0x2341, usbProductId: 0x0043 }
 ];
 
 
