--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <div class="custom-control custom-switch">
           <input type="checkbox" class="custom-control-input custom-switch align-middle" id="autoscrollSwitch" checked>
           <label class="custom-control-label align-middle" for="autoscrollSwitch" style="padding-right: 15px;">auto-scroll</label>
-          <button class="btn btn-primary" id="clearButton" type="button" disabled>Clear Log</button>
+          <button class="btn btn-primary" id="clearButton" type="button">Clear Log</button>
           <button class="btn btn-primary float-right" id="saveWiFiButton" type="button" disabled>Save SSID on device</button>
         </div>
       </div>
@@ -204,12 +204,10 @@ if ('serial' in navigator) {
       inputPassword.disabled = true;
       ssidSelect.disabled = true;
       saveWiFiButton.disabled = true;
-      clearButton.disabled = true;
     } else {
       document.getElementById('SerialResetButton').disabled = false;
       document.getElementById('deleteWiFiModalButton').disabled = false;
       document.getElementById('SerialListWifiButton').disabled = false;
-      clearButton.disabled = false;
       connectButton.innerText = 'Disconnect';
       getReader();
     }
