--- a/index.html
+++ b/index.html
@@ -134,11 +134,11 @@ if ('serial' in navigator) {
   resetButton.addEventListener('click', function () {
     if (port) {
 
-    await port.setSignals({
+    port.setSignals({
       dataTerminalReady: false,
       requestToSend: true,
     });
-    await port.setSignals({
+    port.setSignals({
       dataTerminalReady: false,
       requestToSend: false,
     });
